src/objects/Directory_Launch_Data__mdt.object
<CustomObject>
    <description>Data associated with directory launch component</description>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Directory Launch Data</label>
    <listViews>
        <fullName>Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>Message__c</columns>
        <columns>Record_Type__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
    </listViews>
    <pluralLabel>Directory Launch Data</pluralLabel>
</CustomObject>